--- a/src/apps/migration/migration.scss
+++ b/src/apps/migration/migration.scss
@@ -34,6 +34,41 @@ svg.components-checkbox-control__checked {
 				font-size: 0.75rem;
 				margin: 0;
 			}
+
+			&.text-success {
+				font-size: 0.875rem;
+				color: #4caf50;
+			}
+
+			&.text-failure {
+				font-size: 0.875rem;
+				color: #f44336;
+			}
+		}
+
+		.wpsm-migration-page__csv_upload {
+			display: flex;
+			justify-content: start;
+			align-items: center;
+			gap: 1rem;
+			width: 100%;
+			margin-bottom: 1rem;
+
+			p {
+				margin: 0;
+			}
+		}
+
+		.wpsm-migration-page__table {
+			background-color: #f3f3f3;
+			padding: 1rem;
+			border-radius: 5px;
+			width: 100%;
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			overflow: hidden;
+			margin-bottom: 1rem;
 		}
 
 		.wpsm-migration-page__checkbox_list {
@@ -47,7 +82,7 @@ svg.components-checkbox-control__checked {
 			overflow: hidden;
 
 			.wpsm-migration-page__checkbox_list_top,
-			.wpsm-migration-page__checkbox_list_bottom {
+			.wpsm-migration-page__hceckbox_list_bottom {
 				flex-shrink: 0;
 			}
 			.wpsm-migration-page__checkbox_list_middle {
