removed no longer needed old code, added link to subscriptions list on migrate and rollback

--- a/src/apps/migration/migration.scss
+++ b/src/apps/migration/migration.scss
@@ -117,5 +117,15 @@ svg.components-checkbox-control__checked {
 				margin-left: auto;
 			}
 		}
+		
+		.wpsm-migration-page__checkbox_item {
+			display: flex;
+			align-items: center;
+		    margin-bottom: calc(8px);
+		    
+		    .components-base-control__field {
+			    margin-bottom: 0;
+		    }
+		}
 	}
 }
